--- a/reset all/css/app.css
+++ b/reset all/css/app.css
@@ -2,7 +2,7 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.6rem;
   line-height: 1.4;
 }
