--- a/login/css/app.css
+++ b/login/css/app.css
@@ -5,69 +5,27 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 1.6rem;
   line-height: 1.4;
-  background-image: linear-gradient(to left, rgb(253, 121, 55), rgb(232, 210, 199));
 }
-img {
-  float: left;
-  width: 650px;
-}
-h2 {
-  text-align: center;
-  font-family: "Bold", sans-serif;
-  margin-top: 20px;
-  margin-bottom: 10px;
-}
-p {
-  text-align: center;
-}
-a {
-  text-decoration: none;
-  color: rgb(255, 91, 9);
-}
-form {
-  background-color: white;
-  float: right;
-  min-height: 438px;
-  min-width: 296px;
-  margin-right: 100px;
-  margin-top: 100px;
-  border-radius: 30px;
-}
-.header {
-  margin-top: 30px;
-}
-input {
-  outline: none;
-  display: block;
-  border: 2px solid #ccc;
-  width: 80%;
-  padding: 10px;
-  margin: -5px auto;
-  border-radius: 100px;
-}
-button {
-  display: block;
-  width: 87%;
-  background: rgb(255, 91, 9);
-  padding: 10px;
-  color: #fff;
-  border-radius: 100px;
-  margin: 10px auto;
-  border: none;
-  box-shadow: 0px 3px rgb(232, 210, 199);
-}
-button:hover {
-  opacity: 0.7;
-}
-ul {
+.container {
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
+  background: url(../images/Group\ 51.png) top left no-repeat, linear-gradient(to left, rgb(253, 121, 55), rgb(232, 210, 199));
+  background-size: contain, auto;
   display: flex;
-  list-style-type: none;
-  justify-content: space-evenly;
+  justify-content: center;
+  align-items: center;
 }
-li a {
-  font-size: 30px;
-  margin: auto;
+.form-login {
+  width: 100%;
+  max-width: 400px;
+  margin: 0 auto;
+  padding: 3.5rem;
+  background: #fff;
+  border-radius: 2rem;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
+
 #fb {
   color: rgb(59, 89, 152);
 }
