--- a/main-page/css/app.css
+++ b/main-page/css/app.css
@@ -2,21 +2,21 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 1.6rem;
   line-height: 1.4;
 }
 
-.container{
+.container {
   display: flex;
   justify-content: center;
 }
-.main_container{
+.main_container {
   width: 1500px;
   max-height: 1200px;
 }
 
-.header_container{
+.header_container {
   background-image: url(/main-page/images/background-img.gif);
   width: 1250px;
   height: 95px;
@@ -25,49 +25,50 @@ body {
 
 .centered {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
 }
-.list_menu{
+.list_menu {
   width: 1500px;
   list-style-type: none;
   display: flex;
 }
-.list_menu li{
-  padding-left: 6%;
+.list_menu li {
+  padding-left: 3%;
+}
+.img_li {
+  margin-top: 1px;
 }
 /* li{
   display: inline;
 } */
-.img_icon{
+.img_icon {
   width: 250px;
+  height: 70px;
 }
-.search{
-  width: 550px;
+.search {
+  width: 450px;
   height: 50px;
   padding-top: 5%;
 }
-.search button:hover{
-  color:white;
+.search button:hover {
+  color: white;
   background-color: #f5ae8b;
 }
 
-.type_search{
+.type_search {
   width: 350px;
   height: 40px;
-  padding-left: 8%;
+  padding-left: 9%;
   border: none;
   color: grey;
   font-size: 15px;
 }
-.search i{
+.search i {
   position: absolute;
   margin-top: 8px;
   margin-left: 10px;
   color: grey;
 }
-.search button{
+.search button {
   position: absolute;
   margin-left: auto;
   width: 100px;
@@ -77,30 +78,27 @@ body {
   background-color: #fe7b39;
 }
 
-
-
-.btn_account:focus{
-  background-color:#fe7b39 ;
+.btn_account:focus {
+  background-color: #fe7b39;
   color: white;
   display: block;
   padding-left: 35%;
 }
 
-
-.btn_down a{
+.btn_down a {
   color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
   text-align: left;
 }
-.btn_account:focus .btn_down{
-  background-color:#fe7b39 ;
+.btn_account:focus .btn_down {
+  background-color: #fe7b39;
   color: white;
   display: block;
   padding-left: 35%;
 }
-.btn_down{
+.btn_down {
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -108,7 +106,7 @@ body {
   /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
   z-index: 1;
 }
-.btn_down a{
+.btn_down a {
   float: none;
   /* color: black; */
   padding: 12px 16px;
@@ -116,68 +114,58 @@ body {
   display: block;
   text-align: left;
 }
-.style_icon{
-  padding-top: 2%;
-  margin-left: -9%;
-  margin-right: 3%;
-}
-.icon{
+.icon {
+  padding-top: 1.5%;
+
   list-style-type: none;
   display: flex;
 }
-.icon li{
-  margin-left: 10%;
-}
-.icon i{
+
+.icon i {
   font-size: 40px;
   /* color: #fe7b39; */
 }
-.icon_width{
-  margin-right: 2%;
+
+.icon a:hover {
+  color: #f5ae8b;
 }
-.icon a:hover{
-  color:#f5ae8b;
-  /* background-color: #df9068; */
-}
-.icon a{
-  background-color: #fdf4e3;
+.icon a {
+
   border: none;
   color: #fe7b39;
 }
-.icon a:focus{
-  /* background-color:#fe7b39 ; */
+.icon a:focus {
   color: #f5ae8b;
 }
 
-.navbar{
+.navbar {
   overflow: hidden;
   background-color: #fe7b39;
   width: 1250px;
   height: 40px;
   margin-left: 6%;
-  
 }
-.navbar a{
+.navbar a {
   float: left;
   text-decoration: none;
   color: white;
   text-align: center;
   padding: 10px 10px 15px 10px;
 }
-.navbar a:hover{
+.navbar a:hover {
   background-color: #f5ae8b;
 }
-.navbar a:focus{
+.navbar a:focus {
   background-color: #f5ae8b;
 }
-.style_button_home{
+.style_button_home {
   width: 60px;
   height: 40px;
   color: white;
-  
+
   border: none;
 }
-.body_container{
+.body_container {
   width: 1250px;
   height: 800px;
   margin-left: 6%;
@@ -186,15 +174,15 @@ body {
 .dropbtn {
   background-color: white;
   color: black;
-  padding: 16px;
   font-size: 16px;
   border: none;
+  padding-left: 30px;
   border-radius: 30px;
-  width: 155px;
-  padding-left: 55px;
+  width: 140px;
+  height: 50px;
 }
-.li_account{
-  margin-top: 1.5%;
+.li_account {
+  margin-top: 1%;
 }
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
@@ -206,88 +194,101 @@ body {
 .dropdown-content {
   display: none;
   /* position: absolute; */
-  background-color: #f1f1f1;
-  width: 160px;
-  height: 168px;
+  background-color: white;
+  width: 170px;
+  height: 180px;
   z-index: 1;
-  background-color: #fe7b39;
-  border-radius: 30px;
-  margin-top: -33%;
-  padding-top: 40%;
+  margin-top: 5%;
 }
 
-/* Links inside the dropdown */
+.dropdown-content{
+  border-radius: 3px;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
+  -moz-box-shadow:0px 0px 6px rgba(0, 0, 0, 10);
+  -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
+}
 .dropdown-content a {
-  color: white;
+  color: black;
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  
 }
 .dropdown-content i{
+  color:#fe7b39;
+}
+.dropdown-content i {
   padding-right: 10px;
 }
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #f5ae8b;
-  border-radius: 50px;
+.dropdown-content a:hover {
+  border-radius: 3px;
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
+  -moz-box-shadow:0px 0px 6px rgba(0, 0, 0, 10);
+  -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
 }
 
 /* Show the dropdown menu on hover */
-.dropdown:hover .dropdown-content {display: block;}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {background-color: #fe7b39;
+.dropdown:hover .dropbtn {
+  background-color: #fe7b39;
   color: white;
 }
 
-.img_account{
+.img_account {
   position: absolute;
   width: 50px;
   height: 50px;
   border-radius: 30px;
 }
-.footer{
+.footer {
   background-image: url(/main-page/images/background-img.gif);
   width: 1250px;
   height: 180px;
   background-color: #f8efe2;
   margin-left: 6%;
 }
-.footer h1{
+.footer h1 {
   text-align: center;
   font-size: 50px;
-  color:#fe7b39;
+  color: #fe7b39;
 }
-.info_fatme{
+.info_fatme {
   margin-top: 1%;
 }
-.info_fatme ul{
+.info_fatme ul {
   display: inline-block;
-  zoom:1;  
+  zoom: 1;
   width: 1250px;
   margin-left: 35%;
 }
-.info_fatme li{
+.info_fatme li {
   float: left;
   list-style-type: none;
   margin-right: 5%;
   font-size: 30px;
 }
-.icon_fatme{
+.icon_fatme {
   margin-top: 1%;
 }
-.icon_fatme ul{
+.icon_fatme ul {
   display: inline-block;
-  zoom:1;  
+  zoom: 1;
   width: 1250px;
   margin-left: 40%;
 }
-.icon_fatme li{
+.icon_fatme li {
   float: left;
   list-style-type: none;
   margin-right: 6%;
   font-size: 35px;
 }
-.frame_menu{
+.frame_menu {
   width: 100%;
   height: 100%;
 }
