--- a/main-page/frames/menu/menu.css
+++ b/main-page/frames/menu/menu.css
@@ -1,28 +1,45 @@
+*{
+    margin: 0;
+}
+:root {
+    --color-primary: #ff5500;
+    --color-secondary: #ffb300;
+    --color-button-main: #ff5500;
+    --color-button-hover: #ff7C3a;
+    --color-button-edit: #ebebeb;
+    --color-background: #f6f6f6;
+  }
+.body{
+    font-family: "Source Sans Pro", sans-serif;
+}
 .main_info{
     width: 1250px;
     height: 800px;
 }
 .menu{
+    font-size: 17px;
     float: left;
-    width: 200px;
+    width: 230px;
     height: 800px;
+    box-shadow: 0 1px 4px 0 rgb(0 0 0 / 7%);
+    border-radius: 2rem;
 }
 .menu_style{
     width: 200px;
-    height: 90px;
-    background-color: #ffd5bc;
-    border-radius: 20px;
+    height: 110px;
+    
 }
 .menu_style ul{
-    padding-left: 0;
-    padding-top: 0.5%;
+    padding-left: 1px;
+    
 }
 .menu_style li{
     padding-top: 3%;
     list-style-type: none;
 }
 .style_a{
-    color: white !important;
+    font-weight: bold;
+    color: var(--color-button-main) !important;
 }
 .menu_style a{
     margin-left: 20px;
@@ -30,37 +47,20 @@
     color: black;
 }
 .main_type{
-    color: white;
-    border-radius: 50px;
+    /* color: white; */
     width: 200px;
-    background-color: #fe7b39;
     height: 25px;
 }
-.menu_style2{
-    width: 200px;
-    height: 120px;
-    background-color: #ffd5bc;
-    border-radius: 20px;
-}
-.menu_style2 ul{
-    padding-left: 0;
-    padding-top: 0.5%;
-}
-.menu_style2 li{
-    padding-top: 3%;
-    list-style-type: none;
-}
-.menu_style2 a{
-    margin-left: 20px;
-    text-decoration: none;
-    color: black;
-}
+
+
 .menu_style a:hover{
-    color: #fe7b39;
+    color: var(--color-button-hover);
 }
-.menu_style2 a:hover{
-    color: #fe7b39;
-}
+
 .main_type a:hover{
-    color: #ffd5bc;
+    color: var(--color-button-hover);
+}
+.main_type i{
+    color: var(--color-button-main);
+    font-size: 23px;
 }
