--- a/login/css/app.css
+++ b/login/css/app.css
@@ -194,3 +194,40 @@ ul li .icon {
     width: 80%;
   }
 }
+.sub-link {
+  display: inline-block;
+  position: relative;
+  color: var(--color-primary);
+}
+
+.sub-link:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  transform: scaleX(0);
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: var(--color-button-hover);
+  transform-origin: bottom right;
+  transition: transform 0.25s ease-out;
+}
+
+.sub-link:hover:after {
+  transform: scaleX(1);
+  transform-origin: bottom left;
+}
+.relative {
+  position: relative;
+}
+.relative  i {
+  position: absolute;
+  right: 2rem;
+  top: 50%;
+  transform: translateY(calc(-50% - 0.5rem));
+  color: #ddd;
+}
+.relative  i:hover {
+  color: var(--color-button-hover);
+  cursor: pointer;
+}
