--- a/chinh_sua_menu/css/app.css
+++ b/chinh_sua_menu/css/app.css
@@ -15,50 +15,48 @@ body {
   --color-background: #f5f5f5;
 }
 .container {
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  max-height: 1400px;
+  display: flex;
+  justify-content: center;
+}
+.main_container {
+  width: 1500px;
+  max-height: 1200px;
+}
+
+.header_container {
+  background-image: url(/main-page/images/background-img.gif);
+  width: 1250px;
+  height: 95px;
+  margin-left: 6%;
   
 }
 
-
-.header_container { 
-  left:0;
-  right:0;
-  margin:auto;
-  max-width: 1400px;
-}
 .centered {
-  background-image: url(/main-page/images/background-img.gif);
-  height: 85px;
-  background-repeat: no-repeat;
-  background-size: cover;
-
+  position: absolute;
 }
 .list_menu {
-  height: 100%;
+  width: 1500px;
   list-style-type: none;
   display: flex;
-  align-items: center;
-  justify-content: space-evenly;
 }
-
+.list_menu li {
+  padding-left: 3%;
+}
 .img_li {
   margin-top: 1px;
-  flex-basis: 30%;
 }
-
+/* li{
+  display: inline;
+} */
 .img_icon {
   color: var(--color-primary);
   width: 250px;
   height: 70px;
 }
-
 .search {
-  flex-basis: 40%;
   width: 450px;
   height: 50px;
+  padding-top: 5%;
 }
 .search button:hover {
   color: white;
@@ -88,15 +86,7 @@ body {
   color: white;
   background-color: var(--color-button-main);
 }
-.header-others{
-  flex-basis: 30%;
-}
-.header-others >ul{
-  list-style-type: none;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content:space-evenly;
-}
+
 .btn_account:focus {
   background-color: var(--color-button-hover);
   color: white;
@@ -160,8 +150,9 @@ body {
 .navbar {
   overflow: hidden;
   background-color: var(--color-button-main);
+  width: 1250px;
   height: 40px;
- 
+  margin-left: 6%;
 }
 .navbar a {
   float: left;
@@ -184,12 +175,10 @@ body {
   border: none;
 }
 .body_container {
-
-  left:0;
-  right:0;
-  margin:auto;
-  height: 1000px;
-  max-width: 1400px;
+  width: 1250px;
+  height: 800px;
+  margin-left: 5%;
+  height: 800px;
   
 }
 .dropbtn {
@@ -202,7 +191,10 @@ body {
   width: 140px;
   height: 50px;
 }
-
+.li_account {
+  margin-top: 1%;
+}
+/* The container <div> - needed to position the dropdown content */
 .dropdown {
   position: relative;
   display: inline-block;
@@ -216,7 +208,7 @@ body {
   width: 170px;
   height: 185px;
   z-index: 1;
-  margin-top :200px;
+  margin-top: 5%;
 }
 
 .dropdown-content{
@@ -266,7 +258,7 @@ body {
 }
 .footer {
   background-image: url(/main-page/images/background-img.gif);
-  display: flex;
+  width: 1250px;
   height: 180px;
   background-color: #f8efe2;
   margin-left: 6%;
@@ -282,7 +274,7 @@ body {
 .info_fatme ul {
   display: inline-block;
   zoom: 1;
- 
+  width: 1250px;
   margin-left: 35%;
 }
 .info_fatme li {
@@ -297,7 +289,7 @@ body {
 .icon_fatme ul {
   display: inline-block;
   zoom: 1;
- 
+  width: 1250px;
   margin-left: 40%;
 }
 .icon_fatme li {
