--- a/Home_main_page/css/app.css
+++ b/Home_main_page/css/app.css
@@ -10,7 +10,7 @@ body {
   --color-primary: #ff5500;
   --color-secondary: #ffb300;
   --color-button-main: #ff5500;
-  --color-button-hover: #ff7C3a;
+  --color-button-hover: #ff7c3a;
   --color-button-edit: #ebebeb;
   --color-background: #f5f5f5;
 }
@@ -19,22 +19,18 @@ body {
   width: 100%;
   height: 100vh;
   max-height: 1400px;
-  
 }
-
-
-.header_container { 
-  left:0;
-  right:0;
-  margin:auto;
+.header_container {
+  left: 0;
+  right: 0;
+  margin: auto;
   max-width: 1400px;
 }
 .centered {
-  background-image:url(../images/background-img.gif);
+  background-image: url(../images/background-img.gif);
   height: 85px;
   background-repeat: no-repeat;
   background-size: cover;
-
 }
 .list_menu {
   height: 100%;
@@ -43,7 +39,6 @@ body {
   align-items: center;
   justify-content: space-evenly;
 }
-
 .img_li {
   margin-top: 1px;
   flex-basis: 30%;
@@ -54,7 +49,6 @@ body {
   width: 250px;
   height: 70px;
 }
-
 .search {
   flex-basis: 40%;
   width: 450px;
@@ -64,7 +58,6 @@ body {
   color: white;
   background-color: var(--color-button-hover);
 }
-
 .type_search {
   width: 350px;
   height: 40px;
@@ -88,14 +81,14 @@ body {
   color: white;
   background-color: var(--color-button-main);
 }
-.header-others{
+.header-others {
   flex-basis: 30%;
 }
-.header-others >ul{
+.header-others > ul {
   list-style-type: none;
   display: flex;
   flex-wrap: wrap;
-  justify-content:space-evenly;
+  justify-content: space-evenly;
 }
 .btn_account:focus {
   background-color: var(--color-button-hover);
@@ -149,7 +142,6 @@ body {
   color: var(--color-button-hover);
 }
 .icon a {
-
   border: none;
   color: var(--color-button-main);
 }
@@ -161,7 +153,6 @@ body {
   overflow: hidden;
   background-color: var(--color-button-main);
   height: 40px;
- 
 }
 .navbar a {
   float: left;
@@ -184,13 +175,11 @@ body {
   border: none;
 }
 .body_container {
-
-  left:0;
-  right:0;
-  margin:auto;
+  left: 0;
+  right: 0;
+  margin: auto;
   height: 1000px;
   max-width: 1400px;
-  
 }
 .dropbtn {
   background-color: white;
@@ -216,14 +205,14 @@ body {
   width: 170px;
   height: 185px;
   z-index: 1;
-  margin-top :200px;
+  margin-top: 200px;
 }
 
-.dropdown-content{
+.dropdown-content {
   border-radius: 3px;
   background-color: rgb(255, 255, 255);
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
-  -moz-box-shadow:0px 0px 6px rgba(0, 0, 0, 10);
+  -moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
   -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
 }
 .dropdown-content a {
@@ -231,10 +220,9 @@ body {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
-  
 }
-.dropdown-content i{
-  color:var(--color-button-main);
+.dropdown-content i {
+  color: var(--color-button-main);
 }
 .dropdown-content i {
   padding-right: 10px;
@@ -243,21 +231,18 @@ body {
 .dropdown-content a:hover {
   border-radius: 3px;
   box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
-  -moz-box-shadow:0px 0px 6px rgba(0, 0, 0, 10);
+  -moz-box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
   -webkit-box-shadow: 0px 0px 6px rgba(0, 0, 0, 10);
 }
-
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
 }
-
 /* Change the background color of the dropdown button when the dropdown content is shown */
 .dropdown:hover .dropbtn {
   background-color: var(--color-button-hover);
   color: white;
 }
-
 .img_account {
   position: absolute;
   width: 50px;
@@ -282,7 +267,6 @@ body {
 .info_fatme ul {
   display: inline-block;
   zoom: 1;
- 
   margin-left: 35%;
 }
 .info_fatme li {
@@ -297,7 +281,6 @@ body {
 .icon_fatme ul {
   display: inline-block;
   zoom: 1;
- 
   margin-left: 40%;
 }
 .icon_fatme li {
